# juju-doctor

./: .gitignore  README.md  justfile  pyproject.toml  results-adr.md  tox.ini
.github/actions/run-task/: action.yaml
.github/workflows/: pull-request.yaml  quality-checks.yaml  release.yaml
docs/builtins/: mutually-exclusive-endpoints.md  relations.md
docs/how-to/: contribute-a-builtin.md
examples/: gagent-proxy-redundant-downstream-integration.py  gagent-related-twice-to-same-app.py  proxy-agent-redundant-downstream.py  proxy-agent-related-twice.py  redundant-prom-integrations-bundle.yaml  redundant-prom-integrations-downstream.py  redundant-prom-integrations.py  redundant-prom-integrations.yaml  redundant-proxy-agent-integrations.py  test.yaml
resources/bundle/: gagent-bundle.yaml
resources/status/: gagent-status.yaml
schema/: builtins.json  ruleset.json
src/: fetcher.py  main.py
src/juju_doctor/: artifacts.py  builtins-old.py  builtins.py  fetcher.py  helpers.py  main.py  probe_helpers.py  probes.py  results.py  ruleset.py  tree copy.py  tree.py
src/juju_doctor/builtin/: app-relation-exists.py  application-exists.py  mutually-exclusive-endpoints.py  mutually-exclusive-relations.py  offer-exists.py  relation-exists.py  risk.py
tests/: test_parse.py
tests/resources/: failing.py
tests/solution/: conftest.py  test_command_check all.py  test_command_check.py  test_commands_in_isolation.py  test_file_protocol.py  test_github_protocol.py
tests/unit/: test_parse.py  test_parse_showunit.py  test_probes_uri_parsing.py
tmp/schema/: ruleset.json
(+69 files in other folders)
