# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "juju-doctor"
version = "0.0"
requires-python = ">=3.10"

dependencies = [
  "fsspec",
  "requests",
  "pyyaml"
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  # Static
  "pyright",
  # Unit
  "pytest",
  "coverage[toml]",
]